src/_generated/net/sourceforge/veditor/parser/VhdlParserCore.java
/* Generated By:JavaCC: Do not edit this line. VhdlParserCore.java */
package net.sourceforge.veditor.parser;

public abstract class VhdlParserCore implements VhdlParserCoreConstants {
        protected abstract void addModule(int begin, String name);
        protected abstract void endModule(int line);
        protected abstract void addPort(int line, String portName);
        protected abstract void addVariable(int line, String varName);
        protected abstract void addParameter(int line, String name, String value);
        protected abstract void addElement(int begin, int end, String type, String name);
        protected abstract void addInstance(int begin, int end, String module, String inst);
        protected abstract void beginStatement();
        protected abstract void endStatement();

        public void parse() throws ParseException
        {
                modules();
        }

  final public void modules() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LIBRARY:
        jj_consume_token(LIBRARY);
        skipTo(EOS);
        break;
      case USE:
        jj_consume_token(USE);
        skipTo(EOS);
        break;
      case ENTITY:
        entity();
        break;
      case ARCHITECTURE:
        architecture();
        break;
      case PACKAGE:
        packageDef();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LIBRARY:
      case PACKAGE:
      case USE:
      case ENTITY:
      case ARCHITECTURE:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

  final public void entity() throws ParseException {
        Token name ;
        Token end ;
    jj_consume_token(ENTITY);
    name = identifier();
    jj_consume_token(IS);
                addModule( name.beginLine, name.image );
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GENERIC:
      case PORT:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GENERIC:
        jj_consume_token(GENERIC);
        jj_consume_token(LPAREN);
        skipParen();
        jj_consume_token(RPAREN);
        jj_consume_token(EOS);
        break;
      case PORT:
        jj_consume_token(PORT);
        jj_consume_token(LPAREN);
        port();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOS:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_3;
          }
          jj_consume_token(EOS);
          port();
        }
        jj_consume_token(RPAREN);
        jj_consume_token(EOS);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(END);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ENTITY:
      jj_consume_token(ENTITY);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      identifier();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    end = jj_consume_token(EOS);
                endModule( end.beginLine );
  }

  final public void architecture() throws ParseException {
        Token end;
    jj_consume_token(ARCHITECTURE);
    identifier();
    jj_consume_token(OF);
    identifier();
    jj_consume_token(IS);
    moduleBody();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      identifier();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    end = jj_consume_token(EOS);
                endModule( end.beginLine );
  }

  final public void packageDef() throws ParseException {
        Token name ;
        Token end ;
    jj_consume_token(PACKAGE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BODY:
      jj_consume_token(BODY);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    identifier();
    jj_consume_token(IS);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONSTANT:
      case PROCEDURE:
      case FUNCTION:
      case SIGNAL:
      case SHARED:
      case VARIABLE:
      case TYPE:
      case SUBTYPE:
      case FILE:
      case ALIAS:
      case ATTRIBUTE:
      case FOR:
      case DISCONNECT:
      case GROUP:
        packageDeclaration();
        break;
      case COMPONENT:
        jj_consume_token(COMPONENT);
        name = identifier();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IS:
          jj_consume_token(IS);
          break;
        default:
          jj_la1[9] = jj_gen;
          ;
        }
                        addModule( name.beginLine, name.image );
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case GENERIC:
          case PORT:
            ;
            break;
          default:
            jj_la1[10] = jj_gen;
            break label_5;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case GENERIC:
            jj_consume_token(GENERIC);
            jj_consume_token(LPAREN);
            skipParen();
            jj_consume_token(RPAREN);
            jj_consume_token(EOS);
            break;
          case PORT:
            jj_consume_token(PORT);
            jj_consume_token(LPAREN);
            port();
            label_6:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case EOS:
                ;
                break;
              default:
                jj_la1[11] = jj_gen;
                break label_6;
              }
              jj_consume_token(EOS);
              port();
            }
            jj_consume_token(RPAREN);
            jj_consume_token(EOS);
            break;
          default:
            jj_la1[12] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        end = jj_consume_token(END);
        jj_consume_token(COMPONENT);
        jj_consume_token(EOS);
                        endModule( end.beginLine );
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONSTANT:
      case PROCEDURE:
      case FUNCTION:
      case SIGNAL:
      case SHARED:
      case VARIABLE:
      case TYPE:
      case SUBTYPE:
      case FILE:
      case ALIAS:
      case ATTRIBUTE:
      case COMPONENT:
      case FOR:
      case DISCONNECT:
      case GROUP:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(END);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      identifier();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(EOS);
  }

  final public void port() throws ParseException {
        Token port ;
    port = identifier();
                addPort( port.beginLine, port.image );
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMMA);
      port = identifier();
                        addPort( port.beginLine, port.image );
    }
    jj_consume_token(COLON);
    jj_consume_token(MODE);
    identifier();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RANGE:
      jj_consume_token(RANGE);
      identifier();
      jj_consume_token(TO);
      identifier();
      break;
    default:
      jj_la1[18] = jj_gen;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        skipParen();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
    }
  }

  final public void moduleBody() throws ParseException {
        Token   module, inst, iend ;
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONSTANT:
      case PROCEDURE:
      case FUNCTION:
      case SIGNAL:
      case SHARED:
      case VARIABLE:
      case TYPE:
      case SUBTYPE:
      case FILE:
      case ALIAS:
      case ATTRIBUTE:
      case COMPONENT:
      case FOR:
      case DISCONNECT:
      case GROUP:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_8;
      }
      declaration();
    }
    jj_consume_token(BEGIN);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PROCESS:
      case BLOCK:
      case ASSERT:
      case WITH:
      case IDENT:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_9;
      }
      statement();
    }
    jj_consume_token(END);
  }

  final public Token identifier() throws ParseException {
        Token token ;
    token = jj_consume_token(IDENT);
                {if (true) return token ;}
    throw new Error("Missing return statement in function");
  }

  final public void packageDeclaration() throws ParseException {
        Token variable;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONSTANT:
    case SIGNAL:
    case SHARED:
    case VARIABLE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONSTANT:
        jj_consume_token(CONSTANT);
        break;
      case SIGNAL:
        jj_consume_token(SIGNAL);
        break;
      case SHARED:
      case VARIABLE:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SHARED:
          jj_consume_token(SHARED);
          break;
        default:
          jj_la1[21] = jj_gen;
          ;
        }
        jj_consume_token(VARIABLE);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      variable = identifier();
                        addVariable( variable.beginLine, variable.image );
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[23] = jj_gen;
          break label_10;
        }
        jj_consume_token(COMMA);
        variable = identifier();
                                addVariable( variable.beginLine, variable.image );
      }
      jj_consume_token(COLON);
      skipTo(EOS);
      break;
    case TYPE:
    case SUBTYPE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPE:
        jj_consume_token(TYPE);
        break;
      case SUBTYPE:
        jj_consume_token(SUBTYPE);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      identifier();
      jj_consume_token(IS);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RECORD:
        jj_consume_token(RECORD);
        skipEnd();
        jj_consume_token(END);
        jj_consume_token(RECORD);
        jj_consume_token(EOS);
        break;
      default:
        jj_la1[25] = jj_gen;
        skipTo(EOS);
      }
      break;
    case FILE:
    case ALIAS:
    case ATTRIBUTE:
    case FOR:
    case DISCONNECT:
    case GROUP:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FILE:
        jj_consume_token(FILE);
        break;
      case ALIAS:
        jj_consume_token(ALIAS);
        break;
      case ATTRIBUTE:
        jj_consume_token(ATTRIBUTE);
        break;
      case FOR:
        jj_consume_token(FOR);
        break;
      case DISCONNECT:
        jj_consume_token(DISCONNECT);
        break;
      case GROUP:
        jj_consume_token(GROUP);
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      skipTo(EOS);
      break;
    case PROCEDURE:
      jj_consume_token(PROCEDURE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EOS:
        jj_consume_token(EOS);
        break;
      default:
        jj_la1[28] = jj_gen;
        skipTo(BEGIN);
        skipEnd();
        jj_consume_token(END);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENT:
          identifier();
          break;
        default:
          jj_la1[27] = jj_gen;
          ;
        }
        jj_consume_token(EOS);
      }
      break;
    case FUNCTION:
      jj_consume_token(FUNCTION);
      skipTo(RETURN);
      identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EOS:
        jj_consume_token(EOS);
        break;
      default:
        jj_la1[30] = jj_gen;
        skipTo(BEGIN);
        skipEnd();
        jj_consume_token(END);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENT:
          identifier();
          break;
        default:
          jj_la1[29] = jj_gen;
          ;
        }
        jj_consume_token(EOS);
      }
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void declaration() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONSTANT:
    case PROCEDURE:
    case FUNCTION:
    case SIGNAL:
    case SHARED:
    case VARIABLE:
    case TYPE:
    case SUBTYPE:
    case FILE:
    case ALIAS:
    case ATTRIBUTE:
    case FOR:
    case DISCONNECT:
    case GROUP:
      packageDeclaration();
      break;
    case COMPONENT:
      jj_consume_token(COMPONENT);
      skipTo2(END, COMPONENT);
      skipTo(EOS);
      break;
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void statement() throws ParseException {
        Token ident, module, iend;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      ident = identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
                             beginStatement();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ENTITY:
        case IDENT:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ENTITY:
            jj_consume_token(ENTITY);
            break;
          default:
            jj_la1[33] = jj_gen;
            ;
          }
          module = identifier();
          iend = skipTo(EOS);
                                        addInstance( ident.beginLine, iend.endLine, module.image, ident.image );
          break;
        case FOR:
        case IF:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IF:
            jj_consume_token(IF);
            break;
          case FOR:
            jj_consume_token(FOR);
            break;
          default:
            jj_la1[34] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          skipTo(GENERATE);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case BEGIN:
            jj_consume_token(BEGIN);
            label_11:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case PROCESS:
              case BLOCK:
              case ASSERT:
              case WITH:
              case IDENT:
                ;
                break;
              default:
                jj_la1[35] = jj_gen;
                break label_11;
              }
              statement();
            }
            break;
          case PROCESS:
          case BLOCK:
          case ASSERT:
          case WITH:
          case IDENT:
            label_12:
            while (true) {
              statement();
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case PROCESS:
              case BLOCK:
              case ASSERT:
              case WITH:
              case IDENT:
                ;
                break;
              default:
                jj_la1[36] = jj_gen;
                break label_12;
              }
            }
            break;
          default:
            jj_la1[37] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jj_consume_token(END);
          jj_consume_token(GENERATE);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENT:
            identifier();
            break;
          default:
            jj_la1[38] = jj_gen;
            ;
          }
          jj_consume_token(EOS);
          break;
        case PROCESS:
          jj_consume_token(PROCESS);
          process();
          break;
        default:
          jj_la1[39] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                         endStatement();
        break;
      default:
        jj_la1[41] = jj_gen;
                         beginStatement();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
          jj_consume_token(LPAREN);
          skipParen();
          jj_consume_token(RPAREN);
          break;
        default:
          jj_la1[40] = jj_gen;
          ;
        }
        skipTo(EOS);
                         endStatement();
      }
      break;
    case WITH:
      jj_consume_token(WITH);
                        beginStatement();
      skipTo(EOS);
                                                          endStatement();
      break;
    case PROCESS:
      jj_consume_token(PROCESS);
                           beginStatement();
      process();
                                                         endStatement();
      break;
    case BLOCK:
      jj_consume_token(BLOCK);
                         beginStatement();
      skipTo2(END, BLOCK);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        identifier();
        break;
      default:
        jj_la1[42] = jj_gen;
        ;
      }
      jj_consume_token(EOS);
                                                                      endStatement();
      break;
    case ASSERT:
      jj_consume_token(ASSERT);
                          beginStatement();
      skipTo(EOS);
                                                            endStatement();
      break;
    default:
      jj_la1[43] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void process() throws ParseException {
    skipTo2(END, PROCESS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      identifier();
      break;
    default:
      jj_la1[44] = jj_gen;
      ;
    }
    jj_consume_token(EOS);
  }

  Token skipTo(int skip) throws ParseException {
        Token token ;
        for(;;)
        {
                token = getToken( 1 );
                if ( token.kind == EOF )
                        throw new ParseException("unexpected EOF");
                if ( token.kind == skip )
                {
                        getNextToken();
                        break ;
                }
                getNextToken();
        }
        return token ;
  }

  Token skipTo2(int skip1, int skip2) throws ParseException {
        Token token ;
        for(;;)
        {
                token = getToken( 1 );
                if ( token.kind == EOF )
                        throw new ParseException("unexpected EOF");
                if ( token.kind == skip1 )
                {
                        getNextToken();
                        token = getToken( 1 );
                        if ( token.kind == skip2 )
                        {
                                getNextToken();
                                break ;
                        }
                }
                else
                        getNextToken();
        }
        return token ;
  }

  void skipParen() throws ParseException {
        Token token ;
        int nesting = 1 ;
        for(;;)
        {
                token = getToken( 1 );
                if ( token.kind == EOF )
                        throw new ParseException("unexpected EOF");
                if ( token.kind == LPAREN )
                        nesting++;
                if ( token.kind == RPAREN )
                {
                        nesting--;
                        if ( nesting == 0 )
                                break;
                }
                getNextToken();
        }
  }

  void skipBracket() throws ParseException {
        Token token ;
        int nesting = 1 ;
        for(;;)
        {
                token = getToken( 1 );
                if ( token.kind == EOF )
                        throw new ParseException("unexpected EOF");
                if ( token.kind == LBRACKET )
                        nesting++;
                if ( token.kind == RBRACKET )
                {
                        nesting--;
                        if ( nesting == 0 )
                                break;
                }
                getNextToken();
        }
  }

  void skipEnd() throws ParseException {
        Token token ;
        int nesting = 1 ;
        for(;;)
        {
                token = getToken( 1 );
                if ( token.kind == EOF )
                        throw new ParseException("unexpected EOF");
                if ( token.kind == BEGIN || token.kind == IF || token.kind == CASE || token.kind == LOOP )
                        nesting++;
                if ( token.kind == END )
                {
                        nesting--;
                        if ( nesting == 0 )
                                break;
                        else
                                getNextToken(); // if or case
                }
                getNextToken();
        }
  }

  public VhdlParserCoreTokenManager token_source;
  JavaCharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[45];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static private int[] jj_la1_2;
  static {
      jj_la1_0();
      jj_la1_1();
      jj_la1_2();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0xf400,0xf400,0x180000,0x0,0x180000,0x4000,0x0,0x0,0x800,0x10000,0x180000,0x0,0x180000,0xff000000,0xff000000,0x0,0x0,0x0,0x0,0xff000000,0x200000,0x10000000,0x39000000,0x0,0xc0000000,0x40000,0x0,0x0,0x0,0x0,0x0,0xff000000,0xff000000,0x4000,0x0,0x200000,0x200000,0x600000,0x0,0x204000,0x0,0x0,0x0,0x200000,0x0,};
   }
   private static void jj_la1_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x1000000,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x1000000,0x0,0x61f,0x61f,0x0,0x20000000,0x40000,0x8000,0x61f,0x11800,0x0,0x0,0x20000000,0x0,0x0,0x617,0x0,0x1000000,0x0,0x1000000,0x617,0x61f,0x0,0x30,0x11800,0x11800,0x11800,0x0,0x30,0x40000,0x40000000,0x0,0x11800,0x0,};
   }
   private static void jj_la1_2() {
      jj_la1_2 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x2,0x2,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x2,0x0,0x0,0x0,0x0,0x2,0x0,0x0,0x0,0x0,0x0,0x0,0x2,0x0,0x2,0x0,0x0,0x0,0x0,0x0,0x2,0x2,0x2,0x2,0x2,0x0,0x0,0x2,0x2,0x2,};
   }

  public VhdlParserCore(java.io.InputStream stream) {
     this(stream, null);
  }
  public VhdlParserCore(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new VhdlParserCoreTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 45; i++) jj_la1[i] = -1;
  }

  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 45; i++) jj_la1[i] = -1;
  }
